Fix modals on small screens.

--- a/client/app/css/responsive.styl
+++ b/client/app/css/responsive.styl
@@ -2,6 +2,15 @@
   #logo
     visibility hidden
 
+@media screen and (max-width: 480px)
+  .modal
+    top 10px
+    left 10px
+    right 10px
+  .modal-header .close
+    padding 10px
+    margin -10px
+
 @media screen and (max-width: 640px)
   #main-nav
     padding 0
@@ -44,6 +53,19 @@
       width 100%
     .chat
       display none
+
+  // Modals
+  .modal
+    position fixed
+    top 20px
+    left 20px
+    right 20px
+    width auto
+    margin 0
+    &.fade
+      top -100px
+    &.fade.in
+      top 20px
 
   // Shrink battle window
   .battle
