--- a/client/app/css/teambuilder.styl
+++ b/client/app/css/teambuilder.styl
@@ -440,6 +440,9 @@ textarea.imported-team, textarea.exported-team
       position static
       overflow visible
 
+  textarea.imported-team, textarea.exported-team
+    height auto
+
 @media screen and (max-width: 480px)
   // split species and non-stats
   .teambuilder .meta-info .left-side
